<resources>
    <string name="app_name">College App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home</string>
    <string name="chat_fragment">Chat</string>
    <string name="branch_fragment">Branch</string>
    <string name="setting_fragment">Setting</string>
    <string name="search_for_a_courses">Search for a Courses</string>
    <string name="name">Yuvraj chulpar</string>
    <string name="welcome">Welcome Back</string>
    <string name="language">Top Language</string>
    <string name="view_all">View All</string>
    <string name="courses">Featured Courses</string>
    <string name="game">Game Development</string>
    <string name="choose_your_branch">Choose your Branch</string>
    <string name="branch_name">CSE</string>
    <string name="give_quiz">Give Quiz</string>
    <string name="interview_s">Interview’s</string>
    <string name="settings">Settings</string>
    <string name="yuvraj_chulpar">Yuvraj Chulpar</string>
    <string name="number">+917796178815</string>
    <string name="notification">Notification</string>
    <string name="Privacy">Privacy</string>
    <string name="Security">Security</string>
    <string name="minute">10 minute</string>
    <string name="loreum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="course">Game Development full course for beginner to professional.</string>
    <string name="lesson">24 Lessons</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="google_account">Google account</string>
    <string name="account">Have an a account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="email">Email Address</string>
</resources>