<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/back_color"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:weightSum="2"
       android:layout_gravity="center_horizontal"
       android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:layout_weight="1.5"
           android:textSize="25sp"
           android:layout_marginStart="15dp"
           android:layout_marginTop="20dp"
           android:textColor="@color/white"
           android:text="@string/welcome"/>

       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/userImage"
           android:layout_width="65dp"
           android:layout_height="65dp"
           android:layout_weight="1"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="10dp"
           android:layout_marginStart="50dp"
           android:src="@drawable/tushar"/>
   </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textColor="#A9FFFBFB"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-25dp"
        android:text="Tushar Bodalwar"/>

    <TextView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:hint="@string/search_for_a_courses"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="@color/white"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:background="@drawable/search"
        app:drawableLeftCompat="@drawable/ic_baseline_search_24"
        app:drawableTint="@color/white" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:iss_auto_cycle="true"
        app:iss_period="1000"
        app:iss_delay="0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/light_white"
            android:textSize="15sp"
            android:layout_marginEnd="10sp"
            android:textStyle="normal"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/langRecycler"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/light_white"
            android:textSize="15sp"
            android:layout_marginEnd="10sp"
            android:textStyle="normal"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/courseRecycler"/>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>